[tool.poetry]
name = "demand-forecast"
version = "0.1.0"
description = ""
authors = ["rafaelnduarte <rafaelnduarte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
pandas = "^1.3.0"
matplotlib = "^3.4.0"
plotly-express = "^0.4.1"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
xgboost = "^2.0.3"
features = "^0.5.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
